2007-11-15  Wim Taymans  <wim.taymans@gmail.com>

	Patch by: Wouter Paesen <wouter at blue-gate dot be>

	* ext/soundtouch/gstpitch.cc:
	Handle seeking correctly. Fixes #461068.

2007-11-15  Wim Taymans  <wim.taymans@gmail.com>

	Patch by: Michael Kötter <m dot koetter at oraise dot de>

	* ext/alsaspdif/alsaspdifsink.c: (alsaspdifsink_set_caps),
	(alsaspdifsink_get_time), (alsaspdifsink_open),
	(alsaspdifsink_set_params), (alsaspdifsink_delay), (plugin_init):
	Fix sample rate and clocking.
	Remove buffer_time and period_time as this seems to break on some
	hardware. Fixes #485462.

2007-11-15  Wim Taymans  <wim.taymans@gmail.com>

	Patch by: Wouter Cloetens <wouter at mind dot be>

	* configure.ac:
	* ext/Makefile.am:
	* ext/soup/Makefile.am:
	* ext/soup/gstsouphttpsrc.c: (_do_init),
	(gst_souphttp_src_base_init), (gst_souphttp_src_class_init),
	(gst_souphttp_src_init), (gst_souphttp_src_dispose),
	(gst_souphttp_src_set_property), (gst_souphttp_src_get_property),
	(gst_souphttp_src_create), (gst_souphttp_src_start),
	(gst_souphttp_src_stop), (gst_souphttp_src_unlock),
	(gst_souphttp_src_set_location), (soup_got_chunk), (soup_response),
	(soup_session_close), (plugin_init):
	* ext/soup/gstsouphttpsrc.h:
	Added HTTP source based on libsoup. Fixes #497020.

2007-11-15  Thijs Vermeir  <thijsvermeir@gmail.com>

	* gst/librfb/gstrfbsrc.c:
	don't forget to handle the offset's
	* gst/librfb/rfbdecoder.c:
	* gst/librfb/rfbdecoder.h:
	precalculate some many used values

2007-11-15  Thijs Vermeir  <thijsvermeir@gmail.com>

	patch by: Armando Taffarel Neto <taffarel@solis.coop.br>
	* gst/librfb/gstrfbsrc.c:
	Set the timestamp for the output buffers

2007-11-14  Sebastian Dröge  <slomo@circular-chaos.org>

	* tests/check/elements/spectrum.c: (GST_START_TEST):
	Fix spectrum unit test for the latest spectrum changes.

2007-11-12  Sebastian Dröge  <slomo@circular-chaos.org>

	Patch by: René Stadler <mail at renestadler dot de>

	* gst/replaygain/rganalysis.c: (yule_filter):